Fix White Space

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -7,7 +6,7 @@
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   min-height: 100svh;
   overflow-x: hidden;
   overflow: hidden; /* prevent horizontal scrolling initially */
